@@ -1,3 +1,3 @@
 MiniUPnP is written by Thomas Bernard.
 Its homepage is http://miniupnp.free.fr/
-This is from miniupnpc-20090129.tar.gz
+This is from miniupnpc-1.3.tar.gz
