@@ -6,6 +6,7 @@ NEWS file for Transmission <http://www.transmissionbt.com/>
    + Random port, with optional randomization on startup
    + Transfer prioritization
    + Option for transfers to specify if they are included in the global bandwidth limits
+   + Updated UPnP code to miniupnpc-1.3
 - Mac
    + Requires Mac OS X 10.5 Leopard or newer
    + Groups (moved to preferences) can be auto-assigned to transfers when adding based on multiple criteria
